--- a/src/style/estilo.css
+++ b/src/style/estilo.css
@@ -115,17 +115,22 @@ color:white;
 .ul-Question5Html{
     grid-template-columns: repeat(2, 3fr);
     display: grid;
-    grid-gap: 7em;
-    /*margin-top:7%;*/
+    grid-gap: 3em;
     text-decoration: none;
 }
 .ul-Question5Html li{
-    width: 245%;
-    height: 212px;
+    width: 128%;
+    height: 210px;
     list-style: none;
     text-align: -webkit-center;
     border: 2px solid #94A1B2;
     box-sizing: border-box;
     box-shadow: 0px 2px 0px #94a1b2;
     border-radius: 8px;
+}
+
+.img-Question3{
+    width: 110px;
+    height: 130px;
+    margin-top: 20px;;
 }
