--- a/src/style/estilo.css
+++ b/src/style/estilo.css
@@ -107,11 +107,11 @@ color:white;
     font-size: 22px;
     line-height: 30px;
     color: #FFFFFE;
-    /*padding-top: 50px;*/
     display: flex;
     width: 300px;
-    /*padding-bottom: 20px;*/
+    margin: 0;
 }
+
 .ul-Question5Html{
     grid-template-columns: repeat(2, 3fr);
     display: grid;
@@ -121,7 +121,7 @@ color:white;
 }
 .ul-Question5Html li{
     width: 245%;
-    height: 212px;
+    height: 200px;
     list-style: none;
     text-align: -webkit-center;
     border: 2px solid #94A1B2;
