--- a/src/style/estilo.css
+++ b/src/style/estilo.css
@@ -134,3 +134,23 @@ color:white;
     height: 130px;
     margin-top: 20px;;
 }
+
+#botonR{
+    margin-top: 29px;
+    margin-bottom: 10px;
+    width: 328px;
+    height: 45px;
+    background: #D4CAF3;
+    border: 0px;
+    border-radius: 16px;
+    color: white;
+    display: flex;
+    font-weight: 500;
+    align-items: center;
+    justify-content: center;
+
+}
+
+#buttonR:disabled {
+    background-color: #d4caf3;
+  }
